# rust_lambda

./: Cargo.toml  README  build.sh
src/: main.rs  main.rs~
