[package]
name = "rust_lambda"
version = "0.1.0"
authors = ["Steen Larsen <sla@keycore.dk>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
serde_dynamodb = "0.5.0-beta.1"
openssl = { version = "^0.10", features = ["vendored"] }
log = "^0.4"
simple_logger = "1.6.0"
simple-error = "0.2.1"
rusoto_core = {version = "0.43.0"}
rusoto_dynamodb = {version = "0.43.0", features=["serialize_structs", "deserialize_structs"]}
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1.30"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
